# zion

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
examples/simple-vm/: README.md
zion/: cli.py
zion/devices/: storage.py
zion/domain/: create.py  destroy.py  duplicate.py  helpers.py
zion/hypervisor/: hypervisor.py
